# InsightModAI

./: .gitignore  LICENSE  README.md
.cursor/plans/: insightmodai-aws-setup-0d41eb42.plan.md
.github/environments/: dev.yml  prod.yml
.github/workflows/: deploy.yml
agent/: Dockerfile  insights_agent.py  pyproject.toml
assets/: architecture-diagram-description.md  sample-feedback.json
cloudformation/: template.yaml
docs/: ARCHITECTURE.md  CI-CD.md  DEPLOYMENT.md  OIDC-SETUP.md
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  aws-exports.js
frontend/src/components/: AuthWrapper.js  Dashboard.js  Layout.js  Login.js  MemoryViewer.js  ModuleControl.js  Monitoring.js  Observability.js
frontend/src/services/: api.js  auth.js
lambda/: agent_deployment.py  agent_invoker.py  config_manager.py  crm_integrator.py  feedback_ingestion.py  insights_handler.py  mock_data_generator.py
scripts/: configure-frontend.js  setup-github-actions.sh  test-mock-generator.sh
